@@ -1,3 +1,4 @@
+- only link against -lRlapack, if that is available
 - commands producing lots of output would sometimes be impossible to interrupt. Fixed
 - show command output immediately in command log
 - remember location where R script/workspace files were last opened, and start file-selection dialogs there
